--- a/index.html
+++ b/index.html
@@ -16,9 +16,25 @@
     </div>
 
     <div class="weather">
-      <img src="images/rain.png" alt="rain">
+      <img class="weather-icon"  src="images/rain.png" alt="rain">
       <h1 class="temp" >22°c</h1>
       <h2 class="city" >New York</h2>
+      <div class="details">
+        <div class="col">
+          <img src="images/humidity.png" alt="">
+          <div>
+            <p class="humidity">50%</p>
+            <p>Humidity </p>
+          </div>
+        </div>
+        <div class="col">
+          <img src="images/wind.png" alt="">
+          <div>
+            <p class="humidity">15 km/h</p>
+            <p>Wind Speed </p>
+          </div>
+        </div>
+      </div>
     </div>
 
   </div>
