--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
       <button><img src="images/search.png" alt="search"></button>
     </div>
 
+    <div class="error">
+      <p>Invalid city name</p>
+    </div>
+
     <div class="weather">
       <img class="weather-icon"  src="images/rain.png" alt="rain">
-      <h1 class="temp" >22°c</h1>
+      <h1 class="temp" >22</h1>
       <h2 class="city" >New York</h2>
       <div class="details">
         <div class="col">
@@ -30,7 +34,7 @@
         <div class="col">
           <img src="images/wind.png" alt="">
           <div>
-            <p class="humidity">15 km/h</p>
+            <p class="wind">15 km/h</p>
             <p>Wind Speed </p>
           </div>
         </div>
@@ -38,6 +42,9 @@
     </div>
 
   </div>
+
+
+  <script src="js/script.js"></script>
 
 </body>
 </html>
